argo-events/base/github-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github
  annotations:
    # ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /argo-events
        pathType: Prefix
        backend:
          service:
           name: github-eventsource-svc
           port:
             number: 12000
