argo-events/base/webhook-eventsource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /webhook-eventsource
        pathType: Prefix
        backend:
          service:
           name: webhook-eventsource-svc
           port:
             number: 12001
